--- a/WebDev Projects/matek/style.css
+++ b/WebDev Projects/matek/style.css
@@ -1,30 +1,43 @@
+/* Body Background color */
+
 body{
     background-color: #ffffcc;
     color: #CC6600;
     }
 
+/* Paragraph font size */
+
 p{
     font-size: 18px;
 }
+
+/* H1 size and alignment */
 
 h1{
     text-align: center;
     font-size: 30px;
 }
 
+/* H2 size and alignment */
+
 h2{
     font-size: 25px;
 }
+
+/* Finite Series stlye */
 
 .finite-series {
     font-weight:bold;
     font-style: italic;
 }
 
+/* Small fonts size */
+
 .smaller-font-size {
     font-size: 17px;
 }
 
+/* Fuchsia style */
 
 .fuchsia {
     color: #ff00ff;
@@ -32,29 +45,16 @@ h2{
     font-size: 18px;
   }
 
+/* Purple fonts style */
+
 .purple {
     color: purple;
     font-weight: semi-bold;
   }
 
+/* Intendation of series paragraphs */
 
-    /* unvisited link */
-a:link {
-    color: #000;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: #cc00cc;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: hotpink;
-  }
-  
-  /* selected link */
-  a:active {
-    color: #ff3300;
+.intend-first {
+    text-indent: 50px;
   }
 
