--- a/WebDev Projects/sarkanyhajozas/style/sarkany.css
+++ b/WebDev Projects/sarkanyhajozas/style/sarkany.css
@@ -13,14 +13,28 @@ body {
 
 h1, h2, h3 {
 	text-shadow: 1px 1px white;
+  color: green
+  text-variant small-caps;
+}
+
+h1 {
+  letter-spacing: 5px;
+}
+
+h2 {
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 h3 {
   margin-top: 10px;
+  font-style: italic;
 }
 
 p {
-  line-height: 200%;
+  line-height: 1.5;
+  text-indent: 35px;
+  text-align: justify;
 }
 
 .kepkeret {
@@ -41,3 +55,8 @@ a {
   text-decoration: double;
 }
 
+.green-border{
+ border-left: 2px dotted green;
+ border-right: 2px dotted green;
+
+}
