--- a/WebDev Projects/sarkanyhajozas/style/sarkany.css
+++ b/WebDev Projects/sarkanyhajozas/style/sarkany.css
@@ -38,11 +38,15 @@ p {
 }
 
 .kepkeret {
+  width: 350px;
+  float: right;
   margin: 0 0 10px 15px;
+  border: 5px double;
+  border-color: rgb(0,100,0);
   border-radius: 25px;
-  overflow: auto;
+  overflow: hidden;
   box-shadow: 10px 10px 10px gray;  
-  background-color: rgb(239, 228, 228);
+  background-color: #e4f500;
 }
 
 figcaption {
