--- a/MobilDevelopment/MyFirstApplication2/app/src/main/res/layout/fragment_first.xml
+++ b/MobilDevelopment/MyFirstApplication2/app/src/main/res/layout/fragment_first.xml
@@ -4,13 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1C1C1C"
     tools:context=".FirstFragment">
 
     <TextView
         android:id="@+id/textview_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:lineSpacingExtra="12sp"
         android:text="@string/hello_first_fragment"
+        android:textColor="#7D07D1"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@id/button_first"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
