--- a/WebDev Projects/mobiltelefonok_pt/css/mobilstyle.css
+++ b/WebDev Projects/mobiltelefonok_pt/css/mobilstyle.css
@@ -1,3 +1,15 @@
-body{
-    color: rgb(255, 255, 243);
+body {
+  color: rgb(255, 255, 243);
+}
+
+.hero::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
 }
