--- a/WebDev Projects/mobiltelefonok_peterteszary/css/mobilstyle.css
+++ b/WebDev Projects/mobiltelefonok_peterteszary/css/mobilstyle.css
@@ -2,6 +2,8 @@ body {
   color: rgb(255, 255, 243);
 }
 
+/*Hero Section CSS*/
+
 .hero::before {
   content: "";
   display: block;
@@ -13,6 +15,8 @@ body {
   background-color: rgba(0, 0, 0, 0.6);
   z-index: -1;
 }
+
+/*Card Section CSS*/
 
 .overlay {
   position: absolute;
@@ -28,14 +32,165 @@ body {
   z-index: 2;
 }
 
-.bg-ultra-dark {
-  background-color: rgb(26, 25, 25);
+
+.card-image-hover:hover {
+  transition: transform .3s ease-in-out;
 }
 
- /* Adjust card padding and margin at different screen sizes */
- @media screen and (max-width: 991px) {
+
+/*Darker BG*/
+
+.bg-ultra-dark {
+  background-color: rgb(26, 25, 25) !important;
+}
+
+
+.text--xl {
+  font-size: calc(0.5rem + 1vw);
+}
+
+/*Borders and Buttons*/
+
+.border--accent {
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: aqua;
+
+}
+
+.btn--accent {
+  color: #000000;
+  background-color: aqua;
+  border-color: rgb(0, 85, 85);
+  transition: transform 0.2s ease-in-out;
+}
+
+.btn--accent:hover {
+  transform: translateY(-5px) scale(1.05);
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+.shadow--lg {
+  box-shadow: 5px 10px 8px #0f0e0e;
+}
+
+/*Készülék CSS*/
+
+table.table {
+  background-color: #ffffff;
+  color: #343a40;
+}
+
+.table-container {
+  background-color: rgb(26, 25, 25);
+  margin-top: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+}
+
+
+.mobile-image {
+  transition: transform 0.25s;
+}
+
+.mobile-image:hover {
+  transform: scale(1.1);
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top-color: currentcolor;
+  border-top-style: none;
+  border-top-width: 0px;
+  border-top: 1px solid rgba(255, 255, 255, 0.43);
+}
+
+
+/*Device Section CSS*/
+
+.device-card {
+  position: relative;
+  overflow: hidden;
+
+}
+
+.device-card:hover {
+  transform: translateX(10px) rotate(10deg) translateY(5px);
+  transition: transform 0.5s ease;
+}
+
+.device-image {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  /* 1:1 aspect ratio */
+  background-size: cover;
+  background-position: center;
+
+}
+
+
+
+.device-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.device-card:hover .device-overlay {
+  opacity: 1;
+
+}
+
+.device-title {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: #fff;
+}
+
+/*Links*/
+
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: aqua;
+  transition: transform 0.5s ease;
+  border-bottom: aqua solid 1px;
+}
+
+
+/*Media Queries */
+
+/* Adjust card padding and margin at different screen sizes */
+@media screen and (max-width: 991px) {
   #cards .col {
     margin-bottom: 290px;
   }
- }
-
+}
