--- a/WebDev Projects/mobiltelefonok_peterteszary/css/mobilstyle.css
+++ b/WebDev Projects/mobiltelefonok_peterteszary/css/mobilstyle.css
@@ -33,10 +33,14 @@ body {
 }
 
 
-.card-image-hover:hover {
-  transition: transform .3s ease-in-out;
+a .card-img {
+  transition: transform 0.3s ease-in-out;
+  transform: scale(1);
 }
 
+a .card-img:hover {
+  transform: scale(1.1);
+}
 
 /*Darker BG*/
 
@@ -44,6 +48,41 @@ body {
   background-color: #141522 !important;
 }
 
+.bg--gradient-linear {
+
+  background: linear-gradient(-45deg, #303030, #1a1819, #111944, #18443d);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+
+}
+
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.bg--gradient-radial {
+
+  background: rgb(170, 170, 170);
+  background: radial-gradient(circle, rgba(170, 170, 170, 1) 0%, rgba(20, 19, 48, 1) 100%);
+}
+
+.bg--gradient-radial-two {
+
+  background: #182C37;
+  background: radial-gradient(at left top, #182C37, #27292C);
+}
 
 .text--xl {
   font-size: calc(0.5rem + 1vw);
@@ -56,7 +95,7 @@ body {
   border-radius: 25px;
   border-style: solid;
   border-width: 1px;
-  
+
 
 }
 
@@ -97,7 +136,7 @@ table.table {
   background-color: #282930;
   color: #e3e3e3;
   box-shadow: 5px 10px 8px #0f0e0e;
- 
+
 }
 
 .table-container {
@@ -105,10 +144,12 @@ table.table {
   margin-top: 20px;
   box-shadow: 5px 10px 8px #0f0e0e;
   padding: 20px;
-  
+
 }
 
-.table-dark td, .table-dark th, .table-dark thead th {
+.table-dark td,
+.table-dark th,
+.table-dark thead th {
   border-color: aqua;
 }
 
