--- a/FrontEnd/calc/calc.css
+++ b/FrontEnd/calc/calc.css
@@ -1,3 +1,9 @@
+body {
+    background-color: rgb(90, 90, 90);
+}
+
+
+
 td{
     height: 40px;
     width: 40px;
@@ -13,9 +19,13 @@ td{
 }
 .calc{
     border: 1px solid black;
+    background-color: antiquewhite;
+    width: 220px;
+    margin: auto;
+
 }
 .screen{
-    background-color: antiquewhite;
+    background-color: rgb(255, 224, 184);
     height: 2rem;
     font-size: 1.5rem;
     margin: 0.5rem;
